tests/baselines/reference/primitiveTypeAsInterfaceName.errors.txt
primitiveTypeAsInterfaceName.ts(1,11): error TS2427: Interface name cannot be 'number'.


==== primitiveTypeAsInterfaceName.ts (1 errors) ====
    interface number {}
              ~~~~~~
!!! error TS2427: Interface name cannot be 'number'.